# dcon

./: .gitignore  .gitmessage  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  README.md  SECURITY.md  clippy.toml  package-lock.json  package.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  package-release.yml  release.yml  semantic-release.yml
crates/dcon-cli/: Cargo.toml
crates/dcon-cli/src/: commands.rs  main.rs  output.rs
crates/dcon-cli/src/cli/: types.rs
crates/dcon-core/: Cargo.toml
crates/dcon-core/src/: connection.rs  database.rs  error.rs  lib.rs  query.rs
crates/dcon-core/src/models/: connection.rs  database.rs  mod.rs  table.rs
crates/dcon-gui/: Cargo.toml
crates/dcon-gui/src/: app.rs  main.rs  state.rs
crates/dcon-gui/src/ui/: connection_panel.rs  database_panel.rs  mod.rs  query_panel.rs  status_bar.rs
docs/: DEVELOPMENT.md  INSTALLATION.md  INSTALLATION_SETUP.md  RELEASE_PROCESS.md  SEMANTIC_VERSIONING.md
hooks/: README.md  pre-commit  pre-push  quality-checks.sh
packaging/linux/: build-appimage.sh  build-deb.sh
packaging/macos/: build-dmg.sh
packaging/windows/: build-installer.ps1
scripts/: build-all.sh  build-cli.sh  build-gui.sh  create_seed_db.sh  install-git-hooks.sh  install-oneliner.sh  install.bat  install.ps1  install.sh  package-all.sh  setup-git-hooks.sh  test-semantic-release.sh  trigger-binary-build.sh  update-version.sh
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs  types.rs
src/db/: client.rs
src/models/: connection.rs  database.rs  mod.rs  table.rs
