[workspace]
members = [
    "crates/dcon-core",
    "crates/dcon-cli",
    "crates/dcon-gui"
]
resolver = "2"

[workspace.package]
version = "2.1.0"
edition = "2021"
authors = ["Emad <hey@emaaad.com>"]
license = "MIT"
repository = "https://github.com/emadbaqeri/dcon"
homepage = "https://github.com/emadbaqeri/dcon"
documentation = "https://github.com/emadbaqeri/dcon"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "^0.7", features = ["with-chrono-0_4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
url = "2.4"
regex = "1.9"

# CLI-specific dependencies
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
tabled = "0.14"
dialoguer = "0.10"
indicatif = "0.17"

# GUI-specific dependencies
gpui = { git = "https://github.com/zed-industries/zed" }
async-trait = "0.1"
ropey = "1.6"
tree-sitter = "0.22"
tree-sitter-sql = "0.0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"

# Database drivers for GUI
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid"] }
mongodb = { version = "2.8", features = ["tokio-runtime"] }

# Default members for different build configurations
[workspace.metadata.default-members]
cli-only = ["crates/dcon-core", "crates/dcon-cli"]
gui-only = ["crates/dcon-core", "crates/dcon-gui"]
all = ["crates/dcon-core", "crates/dcon-cli", "crates/dcon-gui"]

# Packaging configuration
[workspace.metadata.bundle]
name = "dcon"
identifier = "com.emaaad.dcon"
version = "2.1.0"
copyright = "Copyright (c) 2024 Emad. All rights reserved."
category = "Developer Tool"
short_description = "PostgreSQL Database Management Tool"
long_description = "A powerful PostgreSQL command-line and GUI tool for database operations built in Rust"
